<resources>
    <string name="app_name">mailProject</string>
    <string name="information_next">Next</string>
    <string name="information_email_hint">이메일</string>
    <string name="information_nickname_hint">닉네임</string>
    
    <string name="information_error_nickname">닉네임은 영문과 숫자를 결합한 4~12자로 입력해주세요.</string>
    <string name="information_eror_email">올바르지 않은 이메일 형식입니다.</string>
    <string name="main_tab_mail">Mail</string>
    <string name="main_tab_setting">Setting</string>
    <string name="mail_drawer_promotions">Promotions</string>
    <string name="mail_drawer_social">Social</string>
    <string name="mail_drawer_primary">Primary</string>
    <string name="promotions_description">Promotions</string>
    <string name="primary_description">Primary</string>
    <string name="social_description">Social</string>
</resources>